--- a/main.html
+++ b/main.html
@@ -7,6 +7,8 @@
 </head>
 
 <body>
+	<div id="line" width="200px" height="2px" style="border:1px solid black">
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
